# py-numbertheory

./: README.md  pyproject.toml
src/numbertheory/: __init__.py  arithmetic.py  modular.py  primes.py
src/pynumbertheory/: __init__.py
tests/: test_arithmetic.py  test_modular.py  test_primes.py
