[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "numbertheory"
version = "0.1.0"
description = "A small number theory utility library (gcd, primes, modular arithmetic, CRT, etc.)"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
  { name = "SHADIK", email = "shadik293@gmail.com.com" }
]
keywords = ["math", "number theory", "modular arithmetic", "primes"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Topic :: Scientific/Engineering :: Mathematics"
]

[project.urls]
Homepage = "https://github.com/shadikhasan/numbertheory"

[tool.setuptools.packages.find]
where = ["src"]
